--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit
-pandas
-selenium
-webdriver-manager
-openpyxl
+streamlit==1.32.0
+pandas==2.2.1
+openpyxl==3.1.2
+selenium==4.19.0
+webdriver-manager==4.0.1
+beautifulsoup4==4.12.3
